<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Rental.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Rental.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/formCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="0dp"
            app:cardElevation="8dp"
            app:strokeColor="@color/colorLightGrey"
            app:strokeWidth="1dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameTil"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        app:boxCornerRadiusBottomEnd="0dp"
                        app:boxCornerRadiusBottomStart="0dp"
                        app:boxCornerRadiusTopEnd="0dp"
                        app:boxCornerRadiusTopStart="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nameEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/fullName"
                            android:inputType="text"
                            android:padding="12dp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phoneTil"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/nameTil"
                        android:layout_margin="12dp"
                        app:boxCornerRadiusBottomEnd="0dp"
                        app:boxCornerRadiusBottomStart="0dp"
                        app:boxCornerRadiusTopEnd="0dp"
                        app:boxCornerRadiusTopStart="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phoneEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone"
                            android:inputType="number"
                            android:maxLength="10"
                            android:padding="12dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordTil"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/phoneTil"
                        android:layout_margin="12dp"
                        app:boxCornerRadiusBottomEnd="0dp"
                        app:boxCornerRadiusBottomStart="0dp"
                        app:boxCornerRadiusTopEnd="0dp"
                        app:boxCornerRadiusTopStart="0dp"
                        app:counterEnabled="true"
                        app:counterMaxLength="15"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLength="15"
                            android:padding="12dp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/cPasswordTil"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/passwordTil"
                        android:layout_margin="12dp"
                        app:boxCornerRadiusBottomEnd="0dp"
                        app:boxCornerRadiusBottomStart="0dp"
                        app:boxCornerRadiusTopEnd="0dp"
                        app:boxCornerRadiusTopStart="0dp"
                        app:counterEnabled="true"
                        app:counterMaxLength="15"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/cPasswordEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirm_password"
                            android:inputType="textPassword"
                            android:maxLength="15"
                            android:padding="12dp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/registerBtn"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/cPasswordTil"
                        android:layout_margin="12dp"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:text="@string/register"
                        app:cornerRadius="0dp" />

                </RelativeLayout>

            </ScrollView>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

